# auto-sre-agent

./: .dockerignore  .env.example  .gitignore  CODEBASE_WALKTHROUGH.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
agent/core/: agent.py  router.py  state.py  supervisor.py
agent/nodes/: approve.py  detect.py  diagnose.py  execute.py  observe.py  plan.py
agent/prompts/: __init__.py  diagnose.md  plan.md  summarize.md  system.md
agent/workflows/: sre_graph.py
agent/workflows/subgraphs/: alert_triage.py  rollback_flow.py
api/: main.py
api/middleware/: auth.py  logging.py
api/routes/: alerts.py  approvals.py  health.py  incidents.py  ui.py
api/schemas/: alert.py  approval.py
configs/: base.yaml  dev.yaml  prod.yaml  settings.py  staging.yaml
deploy/helm/auto-sre-agent/: Chart.yaml  values.yaml
deploy/helm/auto-sre-agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  rbac.yaml  service.yaml  (+1 more)
deploy/kind/: cluster.yaml
deploy/monitoring/: alertmanager-config.yaml  prometheus-rules.yaml  prometheus.yml  rules.yaml
docs/: CODEBASE_WALKTHROUGH.md  architecture.drawio
memory/: checkpointer.py  long_term.py  schemas.py  short_term.py
observability/: logging.py  metrics.py  tracing.py
observability/provisioning/dashboards/: dashboard.yaml
scripts/: bootstrap.sh  seed_prometheus.py  simulate_incident.py
tests/: conftest.py
tests/e2e/: test_incident_flow.py
tests/fixtures/alerts/: alertmanager_crashloop.json
tests/fixtures/metrics/: pod_restarts.json
tests/integration/: test_api.py
tests/unit/: test_memory.py  test_nodes.py  test_tools.py
tools/: base.py
tools/future/: aws.py  gcp.py
tools/kubernetes/: client.py  deployments.py  events.py  pods.py
tools/prometheus/: alerts.py  client.py  metrics.py
tools/redis/: client.py  locks.py  memory.py
(+2 files in other folders)
