[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-sre-agent"
version = "0.1.0"
description = "Autonomous AI-powered SRE agent for Kubernetes infrastructure"
requires-python = ">=3.11"
dependencies = [
    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    # Kubernetes
    "kubernetes>=31.0.0",
    # Redis
    "redis>=5.2.0",
    "langgraph-checkpoint-redis>=0.0.1",
    # Prometheus
    "prometheus-client>=0.21.0",
    "aiohttp>=3.11.0",
    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    # Observability
    "structlog>=24.4.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    # Utilities
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
sre-agent = "agent.core.agent:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agent --cov=tools --cov=memory --cov=api --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools", "memory", "api"]
